# cinto

./: Cargo.toml  LICENCE  README.md  build.rs  setup.py
cinto/: __init__.py  cross_sections.py
cinto_root_geometry/: CMakeLists.txt  root_geometry.cc
examples/bypass/: bypass_adjoint.json  bypass_mg_analog.json  convert_json_to_scalar.py  make_bypass_geom.C  xs_lib.json
src/: common.rs  input.rs  lib.rs  monte_carlo.rs
src/common/: calculation_type.rs  cartesian_mesh.rs  cross_section.rs  cross_section_library.rs  detector.rs  geometry.rs  importance_map.rs  isotope.rs  material.rs  mesh.rs  profiler.rs  source.rs  spherical_mesh.rs  transport_mode.rs  utils.rs
src/common/importance_map/: directional.rs  functional.rs  importance.rs  null.rs  scalar.rs
src/deterministic/: finite_differences.rs
src/input/: json_input.rs
src/monte_carlo/: ams.rs  homogenizer.rs  particle.rs  solver.rs  strategy.rs  tally.rs  trajectory.rs  transport_analog.rs  transport_mode.rs  utils.rs  variance_reduction.rs
